--- a/src/stylesheets/commonStyles.scss
+++ b/src/stylesheets/commonStyles.scss
@@ -20,8 +20,12 @@
   margin-right: 10px;
 }
 
-.pd_30 {
-  padding-top: 30px;
+.pdt_50 {
+  padding-top: 60px;
+}
+
+.pdb_50 {
+  padding-bottom: 50px;
 }
 
 .cb_262626 {
@@ -29,7 +33,19 @@
 }
 
 .fs_12 {
+  font-size: 12px;
+}
+
+.fs_14 {
   font-size: 14px;
+}
+
+.fs_16 {
+  font-size: 16px;
+}
+
+.fw_500 {
+  font-weight: 500;
 }
 
 .cp {
