--- a/src/stylesheets/login.scss
+++ b/src/stylesheets/login.scss
@@ -116,7 +116,7 @@ body {
 .l_line {
   width: 320px;
   text-align: center;
-  border-bottom: 1px solid #f5f5f5;
+  border-bottom: 1px solid #8692A6;
   line-height: 2px;
   margin: 30px auto;
 }
