login, create a job, checkout, order confirm, thankyou page

--- a/src/stylesheets/commonStyles.scss
+++ b/src/stylesheets/commonStyles.scss
@@ -1,9 +1,14 @@
 .theme_clr {
-  color: #1e8ea5;;
+  color: #1e8ea5;
+  ;
 }
 
 .fs_30 {
   font-size: 30px;
+}
+
+.clr_6e7178 {
+  color: #6e7178;
 }
 
 .logo_size {
@@ -21,7 +26,11 @@
 }
 
 .pdt_50 {
-  padding-top: 60px;
+  padding-top: 50px;
+}
+
+.mart_50 {
+  padding-top: 50px;
 }
 
 .pdb_50 {
@@ -54,4 +63,12 @@
 
 .ls_1 {
   letter-spacing: 1px;
+}
+
+.pdl_10 {
+  padding-left: 10px;
+}
+
+.pdr_10 {
+  padding-right: 10px;
 }
