dashboard dropdown fixed

--- a/src/stylesheets/checkout.scss
+++ b/src/stylesheets/checkout.scss
@@ -1,9 +1,9 @@
 .main_container_checkout {
   background-color: #F1F5F8;
-  margin: 0 0 20px 170px;
   font-size: 12px;
   width: auto;
   padding: 20px;
+  padding-left: 180px;
 }
 
 .checkout_section {
