--- a/src/stylesheets/sidebar.scss
+++ b/src/stylesheets/sidebar.scss
@@ -59,8 +59,8 @@
   display: none;
 }
 
-.collapsed {
-  width: calc(100% - 50px);
-  max-width: calc(100% - 50px);
-  margin-left: 50px;
-}
+// .collapsed { 
+//   width: calc(100% - 50px);
+//   max-width: calc(100% - 50px);
+//   margin-left: 50px;
+// }
