--- a/src/stylesheets/dashboardDropdown.scss
+++ b/src/stylesheets/dashboardDropdown.scss
@@ -137,8 +137,7 @@ ul.accordion-list-jobs {
   position: relative;
   display: block;
   width: 100%;
-  height: auto;
-  margin: 0 21px;
+  height: 50px;
   list-style: none;
   background-color: transparent;
 
@@ -148,7 +147,6 @@ ul.accordion-list-jobs {
     width: 100%;
     height: auto;
     background-color: #fff;
-    padding: 20px 15px;
     margin: 0 auto 15px auto;
     border-radius: 5px;
     cursor: pointer;
@@ -162,15 +160,21 @@ ul.accordion-list-jobs {
     div.answer1 {
       position: relative;
       display: block;
-      width: 100%;
+      width: 103%;
       height: auto;
-      padding: 0;
+      padding: 10px;
       cursor: pointer;
       background-color: #fff;
-      margin: 10px 0 0 30px;
+      margin-top: 10px;
       border-radius: 5px;
+      font-size: 12px;
+      margin-left: -10px;
     }
   }
+}
+
+.bb_1 {
+  border-bottom: 1px solid #e9e9e9;
 }
 
 .row_class {
@@ -184,11 +188,16 @@ ul.accordion-list-jobs {
   color: #8692a6;
 }
 
+.job_row_cont {
+  padding: 9px 10px 0 10px;
+  height: 36px;
+  border-bottom: 1px solid #e9e9e9;
+}
+
 .job_row_class {
   display: flex;
   flex-direction: row;
   font-size: 12px;
-  text-transform: uppercase;
   color: #8692a6;
   align-items: center;
 }
@@ -438,3 +447,47 @@ ul.accordion-list-jobs {
 .pt_40 {
   padding-top: 40px;
 }
+
+.w_5 {
+  width: 5%;
+}
+
+.w_7 {
+  width: 7%;
+}
+
+.w_25 {
+  width: 25%;
+}
+
+.w_17 {
+  width: 17%;
+}
+
+.w_14 {
+  width: 14%;
+}
+
+.w_15 {
+  width: 15%;
+}
+
+.dashboard_table_head {
+  width: 100%;
+  height: 30px;
+  border: 1px solid #1E8EA5;
+  display: flex;
+  background-color: #1E8EA5;
+  border-radius: 3px;
+  color: #fff;
+  font-size: 12px;
+  text-transform: uppercase;
+  align-items: center;
+  padding: 0 10px;
+}
+
+.dashboard_row_data {
+  display: flex !important;
+  font-size: 12px;
+  flex-direction: row;
+} 
