--- a/src/stylesheets/dashboardDropdown.scss
+++ b/src/stylesheets/dashboardDropdown.scss
@@ -192,13 +192,14 @@ ul.accordion-list-jobs {
   padding: 9px 10px 0 10px;
   height: 36px;
   border-bottom: 1px solid #e9e9e9;
+  color: #262626;
 }
 
 .job_row_class {
   display: flex;
   flex-direction: row;
   font-size: 12px;
-  color: #8692a6;
+  color: #262626;
   align-items: center;
 }
 
@@ -470,6 +471,18 @@ ul.accordion-list-jobs {
 
 .w_15 {
   width: 15%;
+}
+
+.w_10 {
+  width: 10%;
+}
+
+.w_12 {
+  width: 12%;
+}
+
+.w_20 {
+  width: 20%;
 }
 
 .dashboard_table_head {
