--- a/src/stylesheets/commonStyles.scss
+++ b/src/stylesheets/commonStyles.scss
@@ -65,10 +65,26 @@
   letter-spacing: 1px;
 }
 
+.ls_7 {
+  letter-spacing: 0.7px;
+}
+
 .pdl_10 {
   padding-left: 10px;
 }
 
 .pdr_10 {
   padding-right: 10px;
+}
+
+.clr_8692A6 {
+  color: #8692A6;
+}
+
+.tar {
+  text-align: right;
+}
+
+.mrgrt {
+  margin: 15px 10% 0 0;
 }
