--- a/src/stylesheets/partsSelection.scss
+++ b/src/stylesheets/partsSelection.scss
@@ -7,7 +7,7 @@
 .parts_selection_text_cont {
   display: flex;
   justify-content: space-between;
-  padding: 30px;
+  padding: 30px 0 30px 0;
 }
 
 .fs_30 {
@@ -56,7 +56,6 @@
 }
 
 .selected_parts_model, .parts_selection_date {
-  width: 30%;
   padding: 20px;
 }
 
@@ -76,7 +75,12 @@
 }
 
 .end_date {
-  padding-left: 22px;
+  padding-left: 27px;
+  font-weight: 600;
+}
+
+.order_input_value {
+  padding-left: 9px;
   font-weight: 600;
 }
 
@@ -118,7 +122,7 @@ ul.accordion-list-parts-selection {
     margin-left: -30px;
     &.active {
       .angle_down_ico {
-        transform: rotate(180deg);
+        transform: rotate(-180deg);
       }
     }
 
