--- a/src/stylesheets/commonStyles.scss
+++ b/src/stylesheets/commonStyles.scss
@@ -3,6 +3,14 @@
   ;
 }
 
+.pd_240 {
+  padding: 30px 80px 0 240px;
+}
+
+.pd_140 {
+  padding: 30px 80px 0 140px !important;
+}
+
 .fs_30 {
   font-size: 30px;
 }
@@ -23,6 +31,10 @@
 
 .mr_10 {
   margin-right: 10px;
+}
+
+.mrgl_30 {
+  margin-left: 30px !important;
 }
 
 .pdt_50 {
@@ -71,6 +83,20 @@
 
 .pdl_10 {
   padding-left: 10px;
+}
+
+.pdt_0 {
+  padding-top: 0px !important;
+  padding-bottom: 0px !important;
+}
+
+.wm_10 {
+  width: 102% !important;
+  margin-left: -10px !important;
+}
+
+.mrt_16 {
+  margin-top: 16px;
 }
 
 .pdr_10 {
