--- a/src/stylesheets/dashboard.scss
+++ b/src/stylesheets/dashboard.scss
@@ -1,15 +1,13 @@
 .main_dashboard_container {
   background-color: #F1F5F8;
   width: auto;
-  padding: 30px;
-  padding-left: 200px;
+  height: 100vh;
 }
 
 .dashboard_text_cont {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding-left: 10px;
 }
 
 .fs_30 {
@@ -31,7 +29,7 @@
   border-radius: 5px;
   border: 1px solid #A155B9;
   text-align: center;
-  padding: 5px;
+  padding: 5px 20px;
   font-size: 14px;
   color: #fff;
   cursor: pointer;
@@ -46,7 +44,7 @@
 .dashboard_order_status_cont {
   padding-top: 44px;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
 }
 
 @mixin order_deliver_box {
