--- a/src/stylesheets/dashboardDropdown.scss
+++ b/src/stylesheets/dashboardDropdown.scss
@@ -3,14 +3,6 @@ body {
   font-family: "Inter", sans-serif;
 }
 
-.red_label {
-  width: 4px;
-  height: 4px;
-  background-color: #f32727;
-  position: absolute;
-  border-radius: 50%;
-}
-
 .main_container_all_jobs {
   background-color: #fff;
   margin: 20px 0 20px 200px;
@@ -133,44 +125,51 @@ body {
   flex-direction: row;
 }
 
-ul.accordion-list-jobs {
+.accordion_list {
+  height: 50px !important; 
+}
+
+ul.accordion-list-dashboard {
   position: relative;
   display: block;
   width: 100%;
-  height: 50px;
+  // height: 50px;
   list-style: none;
   background-color: transparent;
-
   li {
     position: relative;
     display: block;
-    width: 100%;
+    width: 103%;
     height: auto;
     background-color: #fff;
-    margin: 0 auto 15px auto;
+    margin: 0 auto 0 auto;
     border-radius: 5px;
     cursor: pointer;
-
+    padding: 10px 0;
     &.active {
       .angle_down_ico {
         transform: rotate(-180deg);
       }
     }
 
-    div.answerDD {
+    div.dashboard_answer {
       position: relative;
       display: block;
-      width: 103%;
+      width: 100%;
       height: auto;
-      padding: 10px;
+      // padding: 10px;
       cursor: pointer;
       background-color: #fff;
-      margin-top: 10px;
+      // margin-top: 10px;
       border-radius: 5px;
       font-size: 12px;
-      margin-left: -10px;
+      // margin-left: -10px;
     }
   }
+}
+
+.mrl_30 {
+  margin-left: -30px !important;
 }
 
 .bb_1 {
@@ -189,10 +188,11 @@ ul.accordion-list-jobs {
 }
 
 .job_row_cont {
-  padding: 9px 10px 0 10px;
-  height: 36px;
   border-bottom: 1px solid #e9e9e9;
   color: #262626;
+  background: #fff;
+  padding: 0 10px;
+  height: 30px;
 }
 
 .job_row_class {
@@ -504,3 +504,8 @@ ul.accordion-list-jobs {
   font-size: 12px;
   flex-direction: row;
 } 
+
+.hp_10 {
+  height: 40px !important;
+  padding: 10px !important;
+}
