--- a/src/stylesheets/partsChecker.scss
+++ b/src/stylesheets/partsChecker.scss
@@ -1,21 +1,24 @@
 .parts_checker_result_cont {
   background-color: #f1f5f8;
-  height: 100vh;
-  padding-left: 8%;
+  height: 200vh;
   width: auto;
 }
 
-.parts_checker_text {
-  padding: 20px 0 20px 10%;
-}
+// .parts_checker_text {
+//   padding: 20px 0 20px 10%;
+// }
 
 .fs_30 {
   font-size: 30px;
 }
 
+.mrt_40 {
+  margin-top: 40px;
+}
+
 .parts_checker_card {
-  width: 80%;
-  margin: 0 auto;
+  width: 100%;
+  margin-top: 40px;
   background-color: #fff;
   border-radius: 5px;
 }
@@ -34,6 +37,7 @@
   display: flex;
   border-bottom: 1px solid #8692A6;
   padding: 20px;
+  align-items: center;
 }
 
 .parts_c_model {
@@ -62,7 +66,7 @@
 }
 
 .file_readable_data > div {
-  padding: 5px 0;
+  padding: 10px 0;
 }
 
 .file_name {
@@ -99,3 +103,26 @@
     border: 1px solid #A155B9;
   }
 }
+
+.box-fileupload {
+  background: #1e8ea5;
+  border: 1px solid #a9e4f1;
+  border-radius: 3px;
+}
+
+.file-upload-input {
+  display: none;
+}
+
+label.file-upload-btn {
+  width: 26px;
+  height: 12px;
+  text-align: center;
+  background-size: cover;
+  background-position: center center;
+  background-origin: border-box;
+  background-repeat: no-repeat;
+  color: #fff;
+}
+
+
