--- a/src/stylesheets/partsSelection.scss
+++ b/src/stylesheets/partsSelection.scss
@@ -1,8 +1,7 @@
 .main_parts_selection_cont {
   background-color: #f1f5f8;
-  padding: 0 30px 0 220px;
-  height: 100vh;
-}
+  height: 200vh;
+} 
 
 .parts_selection_text_cont {
   display: flex;
@@ -33,7 +32,7 @@
 
 .parts_selection_desc, .part_number_details {
   background-color: #fff;
-  border: 1px solid #e4e4e4;
+  // border: 1px solid #e4e4e4;
   border-top: none;
   font-size: 14px;
   width: auto;
@@ -106,20 +105,18 @@ ul.accordion-list-parts-selection {
   position: relative;
   display: block;
   width: 100%;
-  height: 50px;
+  // height: 50px;
   list-style: none;
   background-color: transparent;
-
   li {
     position: relative;
     display: block;
     width: 100%;
     height: auto;
     background-color: #fff;
-    margin: 0 auto 15px auto;
+    margin: 15px auto 15px -30px;
     border-radius: 5px;
     cursor: pointer;
-    margin-left: -30px;
     &.active {
       .angle_down_ico {
         transform: rotate(-180deg);
@@ -131,7 +128,6 @@ ul.accordion-list-parts-selection {
       display: block;
       width: 100%;
       height: auto;
-      padding: 0 10px;
       cursor: pointer;
       background-color: #fff;
       border-radius: 5px;
@@ -141,7 +137,7 @@ ul.accordion-list-parts-selection {
 }
 
 .part_number_details {
-  height: 500px;
+  // height: 500px;
 }
 
 .parts_expand_cont_head {
