--- a/src/stylesheets/uploadPartsFile.scss
+++ b/src/stylesheets/uploadPartsFile.scss
@@ -1,12 +1,11 @@
 .upload_part_list_cont {
   background-color: #f1f5f8;
   height: 100vh;
-  padding-left: 8%;
 }
 
-.upload_partlist_text_cont {
-  padding: 20px 0 20px 10%;
-}
+// .upload_partlist_text_cont {
+//   padding: 20px 0 20px 10%;
+// }
 
 .fs_30 {
   font-size: 30px;
@@ -14,8 +13,8 @@
 }
 
 .upload_btn_cont {
-  width: 80%;
-  margin: 0 auto;
+  width: 100%;
+  margin-top: 40px;
   height: 200px;
   background-color: #fff;
   border: 1px solid #8692A6;
