added checkbox and more

--- a/src/stylesheets/commonStyles.scss
+++ b/src/stylesheets/commonStyles.scss
@@ -114,3 +114,15 @@
 .mrgrt {
   margin: 15px 10% 0 0;
 }
+
+.mt_40 {
+  margin-top: 40px;
+}
+
+.fcapt {
+  text-transform: capitalize;
+}
+
+.pdr_35 {
+  margin-left: 35px;
+}
