--- a/src/stylesheets/partsResultTable.scss
+++ b/src/stylesheets/partsResultTable.scss
@@ -21,6 +21,7 @@
   font-size: 14px;
   padding: 2px 10px;
   border-radius: 3px;
+  text-transform: capitalize;
   &:hover {
     background-color: #fff;
     color: #A155B9;
