--- a/src/stylesheets/partsChecker.scss
+++ b/src/stylesheets/partsChecker.scss
@@ -4,9 +4,9 @@
   width: auto;
 }
 
-// .parts_checker_text {
-//   padding: 20px 0 20px 10%;
-// }
+.parts_checker_text, .parts_checker_heading {
+  text-transform: capitalize;
+}
 
 .fs_30 {
   font-size: 30px;
@@ -97,6 +97,7 @@
   font-size: 14px;
   padding: 2px 10px;
   border-radius: 3px;
+  text-transform: capitalize;
   &:hover {
     background-color: #fff;
     color: #A155B9;
@@ -112,6 +113,11 @@
 
 .file-upload-input {
   display: none;
+}
+
+.file_btn_class {
+  border: none;
+  padding: 0px;
 }
 
 label.file-upload-btn {
