--- a/src/stylesheets/uploadPartsFile.scss
+++ b/src/stylesheets/uploadPartsFile.scss
@@ -1,6 +1,7 @@
 .upload_part_list_cont {
   background-color: #f1f5f8;
   height: 100vh;
+  text-transform: capitalize;
 }
 
 // .upload_partlist_text_cont {
