--- a/src/stylesheets/dashboardDropdown.scss
+++ b/src/stylesheets/dashboardDropdown.scss
@@ -191,8 +191,8 @@ ul.accordion-list-dashboard {
   border-bottom: 1px solid #e9e9e9;
   color: #262626;
   background: #fff;
-  padding: 0 10px;
-  height: 30px;
+  padding: 10px;
+  height: 40px;
 }
 
 .job_row_class {
