--- a/src/stylesheets/dashboard.scss
+++ b/src/stylesheets/dashboard.scss
@@ -2,7 +2,7 @@
   background-color: #F1F5F8;
   width: auto;
   height: 100vh;
-  text-transform: capitalize;
+  // text-transform: capitalize;
 }
 
 .dashboard_text_cont {
