--- a/src/stylesheets/partsChecker.scss
+++ b/src/stylesheets/partsChecker.scss
@@ -5,7 +5,7 @@
 }
 
 .parts_checker_text, .parts_checker_heading {
-  text-transform: capitalize;
+  // text-transform: capitalize;
 }
 
 .fs_30 {
@@ -97,7 +97,7 @@
   font-size: 14px;
   padding: 2px 10px;
   border-radius: 3px;
-  text-transform: capitalize;
+  // text-transform: capitalize;
   &:hover {
     background-color: #fff;
     color: #A155B9;
