--- a/src/stylesheets/createAJob.scss
+++ b/src/stylesheets/createAJob.scss
@@ -6,7 +6,7 @@ body {
   background-color: #F1F5F8;
   width: auto;
   height: 170vh;
-  text-transform: capitalize;
+  // text-transform: capitalize;
 }
 
 @mixin act_btn {
@@ -25,7 +25,7 @@ body {
   float: right;
   background-color: #A155B9;
   margin-top: 30px;
-  text-transform: capitalize;
+  // text-transform: capitalize;
   &:hover {
     background-color: #fff;
     color: #A155B9;
@@ -36,7 +36,7 @@ body {
 .upload_btn {
   @include act_btn;
   background-color: #1E8EA5;
-  text-transform: capitalize;
+  // text-transform: capitalize;
   &:hover {
     background-color: #fff;
     color: #1E8EA5;
@@ -103,7 +103,7 @@ body {
 .customer_form {
   margin-top: 30px;
   width: 66%;
-  text-transform: capitalize;
+  // text-transform: capitalize;
 }
 
 .create_job {
@@ -151,7 +151,7 @@ body {
   }
 
   .navbar-nav {
-    text-transform: capitalize;
+    // text-transform: capitalize;
     li {
       display: block;
       width: 100%;
