--- a/src/stylesheets/thankYou.scss
+++ b/src/stylesheets/thankYou.scss
@@ -98,6 +98,13 @@
   padding-left: 40px;
 }
 
+.pdl_68 {
+  padding-left: 68px;
+}
+.w_161 {
+  width: 161px;
+}
+
 .view_order_details {
   text-align: center;
   color: #1e8ea5;
