--- a/src/stylesheets/partsSelection.scss
+++ b/src/stylesheets/partsSelection.scss
@@ -79,6 +79,11 @@
   font-weight: 600;
 }
 
+.start_date_c {
+  padding-left: 37px;
+  font-weight: 600;
+}
+
 .end_date {
   padding-left: 35px;
   font-weight: 600;
