--- a/src/stylesheets/dashboardDropdown.scss
+++ b/src/stylesheets/dashboardDropdown.scss
@@ -449,6 +449,14 @@ ul.accordion-list-dashboard {
   padding-top: 40px;
 }
 
+.w_3 {
+  width: 3%;
+}
+
+.w_13 {
+  width: 13%;
+}
+
 .w_5 {
   width: 5%;
 }
