--- a/src/stylesheets/dashboard.scss
+++ b/src/stylesheets/dashboard.scss
@@ -5,6 +5,10 @@
   // text-transform: capitalize;
 }
 
+.h_150 {
+  height: 150vh !important;
+}
+
 .dashboard_text_cont {
   display: flex;
   justify-content: space-between;
