--- a/src/stylesheets/commonStyles.scss
+++ b/src/stylesheets/commonStyles.scss
@@ -1,6 +1,9 @@
 .theme_clr {
   color: #1e8ea5;
-  ;
+}
+
+.theme_bg {
+  background-color: #1e8ea5 !important;
 }
 
 .pd_240 {
@@ -13,6 +16,14 @@
 
 .fs_30 {
   font-size: 30px;
+}
+
+.pd_ins {
+  padding: 5px 40px !important;
+}
+
+.top_10 {
+  top: 10px !important;
 }
 
 .clr_6e7178 {
@@ -42,6 +53,10 @@
   margin-left: 30px !important;
 }
 
+.mrgt_30 {
+  margin-top: 30px !important;
+}
+
 .pdt_50 {
   padding-top: 50px;
 }
@@ -50,8 +65,20 @@
   padding-top: 50px;
 }
 
+.pdt_20 {
+  padding-top: 20px !important;
+}
+
 .pdb_50 {
   padding-bottom: 50px;
+}
+
+.h_50 {
+  height: 50px !important;
+}
+
+.h_20 {
+  height: 20px !important;
 }
 
 .cb_262626 {
@@ -94,6 +121,18 @@
   padding-left: 10px;
 }
 
+.bb_none {
+  border-bottom: none !important;
+}
+
+.bdr_1 {
+  border-top: 1px solid #e9e9e9 !important;
+}
+
+.pdl_30 {
+  padding-left: 30px !important;
+}
+
 .pdt_0 {
   padding-top: 0px !important;
   padding-bottom: 0px !important;
@@ -107,6 +146,11 @@
 .mrt_16 {
   margin-top: 16px;
 }
+
+.mrb_10 {
+  margin-bottom: 10px;
+}
+
 
 .pdr_10 {
   padding-right: 10px;
