--- a/src/stylesheets/timelines.scss
+++ b/src/stylesheets/timelines.scss
@@ -3,6 +3,8 @@ $color-background: #fff;
 $width: 900px;
 
 .timeline_cont, .tml_list {
+  margin: 0;
+  padding: 0;
   color: #1E8EA5;
   font-size: 14px;
 }
