--- a/src/stylesheets/sidebar.scss
+++ b/src/stylesheets/sidebar.scss
@@ -32,6 +32,10 @@
   }
 }
 
+.pdl_15 {
+  padding-left: 15px !important;
+}
+
 // .main_container_create_a_job {
 //   background-color: #fff;
 //   margin: 20px 0 20px 200px;
@@ -48,6 +52,11 @@
   margin-right: 25px;
   font-size: 12px;
   cursor: pointer;
+}
+
+.tool {
+  width: 14px;
+  margin-right: 18px;
 }
 
 .w_50 {
