--- a/src/stylesheets/commonStyles.scss
+++ b/src/stylesheets/commonStyles.scss
@@ -40,6 +40,10 @@
   text-align: center;
 }
 
+.h_55 {
+  height: 55px !important;
+}
+
 .mr_10 {
   margin-right: 10px;
 }
@@ -175,11 +179,15 @@
 .mt_40 {
   margin-top: 40px;
 }
- 
-// .fcapt {
-//   text-transform: capitalize;
-// }
 
 .pdr_35 {
   margin-left: 35px;
+}
+
+.pdl_20 {
+  padding-left: 20px;
+}
+
+.bg_fafaff {
+  background-color: #FAFAFF !important;
 }
