fixed css issue

--- a/src/stylesheets/commonStyles.scss
+++ b/src/stylesheets/commonStyles.scss
@@ -69,6 +69,14 @@
   padding-top: 50px;
 }
 
+.mrt_0 {
+  margin-top: 0px !important;
+}
+
+.h_60 {
+  height: 60px !important;
+}
+
 .pdt_20 {
   padding-top: 20px !important;
 }
