--- a/src/stylesheets/partsOverviewTab.scss
+++ b/src/stylesheets/partsOverviewTab.scss
@@ -1,38 +1,3 @@
-ul.accordion-list-parts-overview-tab {
-  position: relative;
-  display: block;
-  width: 100%;
-  // height: 50px;
-  list-style: none;
-  background-color: transparent;
-  li {
-    position: relative;
-    display: block;
-    width: 100%;
-    height: auto;
-    background-color: #fff;
-    margin: 15px auto 15px -30px;
-    border-radius: 5px;
-    cursor: pointer;
-    &.active {
-      .angle_down_ico {
-        transform: rotate(-180deg);
-      }
-    }
-
-    div.parts_ovr_answer {
-      position: relative;
-      display: block;
-      width: 100%;
-      height: auto;
-      cursor: pointer;
-      background-color: #fff;
-      border-radius: 5px;
-      font-size: 12px;
-    }
-  }
-}
-
 ul.accordion-list-parts-tab {
   position: relative;
   display: block;
@@ -46,7 +11,9 @@ ul.accordion-list-parts-tab {
     width: 100%;
     height: auto;
     background-color: #fff;
-    margin: 15px auto 15px -30px;
+    margin-left: -30px;
+    // margin-bottom: 15px;
+    // margin: 15px auto 15px -30px;
     border-radius: 5px;
     cursor: pointer;
     &.active {
