--- a/src/stylesheets/commonStyles.scss
+++ b/src/stylesheets/commonStyles.scss
@@ -137,6 +137,10 @@
   border-bottom: none !important;
 }
 
+.clr_red {
+  color: #DE626D;
+}
+
 .bdr_1 {
   border-top: 1px solid #e9e9e9 !important;
 }
