--- a/src/stylesheets/resultLoader.scss
+++ b/src/stylesheets/resultLoader.scss
@@ -1,3 +1,8 @@
+@keyframes placeholderAnimate {
+  0%{ background-position: -250px 0; }
+  100%{ background-position: 250px 0; }
+}
+
 .loading-placeholder-container {
   display: block;
   .loading-text {
