--- a/src/stylesheets/partsSelection.scss
+++ b/src/stylesheets/partsSelection.scss
@@ -15,6 +15,19 @@
   font-weight: 600;
 }
 
+.flx_dd {
+  display: flex;
+  align-items: center;
+}
+
+.vs {
+  visibility: visible;
+}
+
+.vsh {
+  visibility: hidden;
+}
+
 .parts_order_btn {
   background-color: #A155B9;
   color: #fff;
@@ -190,7 +203,6 @@ ul.accordion-list-parts-selection {
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
   padding-top: 5px;
-  // text-transform: capitalize;
   background-color: #fff;
   margin-left: -20px;
   border-radius: 5px;
@@ -211,7 +223,6 @@ ul.accordion-list-parts-selection {
   color: black;
   padding: 7px 16px;
   text-decoration: none;
-  display: block;
   border-radius: 5px;
 }
 
