change login details css changes

--- a/src/stylesheets/thankYou.scss
+++ b/src/stylesheets/thankYou.scss
@@ -98,8 +98,8 @@
   padding-left: 40px;
 }
 
-.pdl_68 {
-  padding-left: 68px;
+.pdl_66 {
+  padding-left: 66px;
 }
 .w_161 {
   width: 161px;
@@ -133,4 +133,8 @@
 
 .pd_bottom {
   padding-bottom: 10px;
+}
+
+.wdth_46 {
+  width: 46px;
 }
